--- a/app/grandchallenge/forge/templates/forge/partials/example_evaluation_method/do_save.sh.template
+++ b/app/grandchallenge/forge/templates/forge/partials/example_evaluation_method/do_save.sh.template
@@ -6,7 +6,7 @@ set -e
 SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}" )" &> /dev/null && pwd )
 
 # Set default container name
-DOCKER_IMAGE_TAG="example_algorithm_{{ phase.slug }}"
+DOCKER_IMAGE_TAG="example-evaluation-{{ phase.slug }}"
 
 echo ""
 echo "= STEP 1 = (Re)build the image"
@@ -16,7 +16,7 @@ echo "==== Done"
 echo ""
 
 # Get the build information from the Docker image tag
-build_timestamp=$( docker inspect --format='{% raw %}{{ .Created }}{% endraw %}' "$DOCKER_IMAGE_TAG")
+build_timestamp=$( docker inspect --format='{% verbatim %}{{ .Created }}{% endverbatim %}' "$DOCKER_IMAGE_TAG")
 
 if [ -z "$build_timestamp" ]; then
     echo "Error: Failed to retrieve build information for container $DOCKER_IMAGE_TAG"
@@ -42,14 +42,14 @@ echo ""
 
 
 # Create the tarbal
-echo "= STEP 3 = Packing the model"
+echo "= STEP 3 = Packing the ground truth"
 echo "This can take a while."
-output_tarball_name="${SCRIPT_DIR}/model.tar.gz"
+output_tarball_name="${SCRIPT_DIR}/ground_truth.tar.gz"
 
-tar -czf $output_tarball_name -C "${SCRIPT_DIR}/model" .
-printf "Saved as: \e[model.tar.gz\e[0m\n"
+tar -czf $output_tarball_name -C "${SCRIPT_DIR}/ground_truth" .
+printf "Saved as: \e[32mground_truth.tar.gz\e[0m\n"
 
 echo "==== Done"
 echo ""
 
-printf "\e[31mIMPORTANT: Please add the model.tar.gz as seperate Model to your Algorithm!\e[0m\n"
+printf "\e[31mIMPORTANT: Please add the ground_truth.tar.gz as seperate Ground Truth to your Phase!\e[0m\n"
