--- a/app/grandchallenge/forge/templates/forge/partials/example_evaluation_method/do_test_run.sh.template
+++ b/app/grandchallenge/forge/templates/forge/partials/example_evaluation_method/do_test_run.sh.template
@@ -64,12 +64,9 @@ echo "=+= Doing a forward pass"
 #   is added because on Grand Challenge this directory cannot be used to store permanent files
 # '-volume ../ground_truth:/opt/ml/input/data/ground_truth:ro'
 #   is added to provide access to the (optional) tarball-upload locally
-docker run --rm \
+docker run --rm {% if not no_gpus %}--gpus all {% endif %}\
     --platform=linux/amd64 \
     --network none \
-    {% if not _no_gpus -%}
-    --gpus all \
-    {% endif -%}
     --volume "$INPUT_DIR":/input:ro \
     --volume "$OUTPUT_DIR":/output \
     --volume "$DOCKER_NOOP_VOLUME":/tmp \
