--- a/app/grandchallenge/forge/templates/forge/partials/example_algorithm/do_test_run.sh.template
+++ b/app/grandchallenge/forge/templates/forge/partials/example_algorithm/do_test_run.sh.template
@@ -70,12 +70,9 @@ run_docker_forward_pass() {
     #   is added because on Grand Challenge this directory cannot be used to store permanent files
     # '-volume ../model:/opt/ml/model/":ro'
     #   is added to provide access to the (optional) tarball-upload locally
-    docker run --rm \
+    docker run --rm {% if not no_gpus %}--gpus all {% endif %}\
         --platform=linux/amd64 \
         --network none \
-        {% if not _no_gpus -%}
-        --gpus all \
-        {% endif -%}
         --volume "${INPUT_DIR}/${interface_dir}":/input:ro \
         --volume "${OUTPUT_DIR}/${interface_dir}":/output \
         --volume "$DOCKER_NOOP_VOLUME":/tmp \
