--- a/app/grandchallenge/forge/templates/forge/partials/pack_readme/README.md.template
+++ b/app/grandchallenge/forge/templates/forge/partials/pack_readme/README.md.template
@@ -24,7 +24,7 @@ Challenge phases pull their data from archives to test submissions on.
 
 Your challenge has the following archives:
 
-{% for archive in challenge.archives -%}
+{% for archive in challenge.archives %}
   * {{ archive.url }}
 {% endfor %}
 
