--- a/app/grandchallenge/forge/templates/forge/partials/example_algorithm/do_test_run.sh.template
+++ b/app/grandchallenge/forge/templates/forge/partials/example_algorithm/do_test_run.sh.template
@@ -64,11 +64,11 @@ run_docker_forward_pass() {
     ## Note the extra arguments that are passed here:
     # '--network none'
     #    entails there is no internet connection
-    # 'gpus all'
+    # '--gpus all'
     #    enables access to any GPUs present
     # '--volume <NAME>:/tmp'
     #   is added because on Grand Challenge this directory cannot be used to store permanent files
-    # '-volume ../model:/opt/ml/model/":ro'
+    # '--volume ../model:/opt/ml/model/":ro'
     #   is added to provide access to the (optional) tarball-upload locally
     docker run --rm {% if not no_gpus %}--gpus all {% endif %}\
         --platform=linux/amd64 \
