--- a/app/pytest.ini
+++ b/app/pytest.ini
@@ -2,10 +2,11 @@
 DJANGO_SETTINGS_MODULE = tests.settings
 testpaths = tests
 python_files = tests.py test_*.py *_tests.py
-addopts = --strict-markers --showlocals -n auto --dist worksteal
+addopts = --strict-markers --showlocals -n auto --dist worksteal -m 'not forge_integration'
 cache_dir = /tmp/.pytest_cache
 markers =
     playwright: playwright tests
+    forge_integration: forge integration test
 filterwarnings =
     # https://github.com/DIAGNijmegen/grand-challenge/issues/2412
     ignore::DeprecationWarning:stdimage.models:22
