--- a/app/grandchallenge/forge/templates/forge/partials/example_evaluation_method/evaluate.py.template
+++ b/app/grandchallenge/forge/templates/forge/partials/example_evaluation_method/evaluate.py.template
@@ -29,11 +29,11 @@ https://grand-challenge.org/documentation/runtime-environment/
 Happy programming!
 """
 import json
-{% if algorithm_output_sockets|has_image or phase.evaluation_additional_inputs|has_image or phase.evaluation_additional_outputs|has_image  %}
+{% if phase.algorithm_output_sockets|has_image or phase.evaluation_additional_inputs|has_image or phase.evaluation_additional_outputs|has_image  %}
 from glob import glob
 import SimpleITK
 {% endif %}
-{% if algorithm_output_sockets|has_image or algorithm_output_sockets|has_file or phase.evaluation_additional_inputs|has_file %}
+{% if phase.algorithm_output_sockets|has_image or phase.algorithm_output_sockets|has_file or phase.evaluation_additional_inputs|has_file %}
 import re
 {% endif %}
 {% if phase.evaluation_additional_outputs|has_image %}
@@ -163,7 +163,7 @@ def process(job):
 
     # Lookup the handler for this particular set of sockets (i.e. the interface)
     handler = {
-    {% for interface_name, interface_key in algorithm_interface_names|zip:algorithm_interface_keys %}
+    {% for interface_name, interface_key in phase.algorithm_interface_names|zip:phase.algorithm_interface_keys %}
     {{ interface_key }} : process_{{ interface_name }},
     {% endfor %}
     }[interface_key]
@@ -201,7 +201,7 @@ def process(job):
     {% endif %}
 
 
-{% for interface_name, interface in algorithm_interface_names|zip:phase.algorithm_interfaces %}
+{% for interface_name, interface in phase.algorithm_interface_names|zip:phase.algorithm_interfaces %}
 def process_{{ interface_name }}(job,
     {% if phase.evaluation_additional_inputs %}# The submission had additional inputs: {% endif %}
     {% for socket in phase.evaluation_additional_inputs %}
@@ -296,7 +296,7 @@ def get_interface_key(job):
     socket_slugs = [sv["interface"]["slug"] for sv in job["inputs"]]
     return tuple(sorted(socket_slugs))
 
-{% if algorithm_input_sockets|has_image or phase.evaluation_additional_inputs|has_image %}
+{% if phase.algorithm_input_sockets|has_image or phase.evaluation_additional_inputs|has_image %}
 def get_image_name(*, values, slug):
     # This tells us the user-provided name of the input or output image
     for value in values:
@@ -307,7 +307,7 @@ def get_image_name(*, values, slug):
 {% endif %}
 
 
-{% if algorithm_input_sockets|has_file or phase.evaluation_additional_inputs|has_file %}
+{% if phase.algorithm_input_sockets|has_file or phase.evaluation_additional_inputs|has_file %}
 def get_file_name(*, values, slug):
     # This tells us the user-provided name of the input file
     for value in values:
@@ -343,7 +343,7 @@ def load_json_file(*, location):
     with open(location) as f:
         return json.loads(f.read())
 
-{% if algorithm_output_sockets|has_image or phase.evaluation_additional_inputs|has_image%}
+{% if phase.algorithm_output_sockets|has_image or phase.evaluation_additional_inputs|has_image%}
 def load_image_file_as_array(*, location):
     # Use SimpleITK to read a file
     input_files = glob(str(location / "*.tiff")) + glob(str(location / "*.mha"))
@@ -353,7 +353,7 @@ def load_image_file_as_array(*, location):
     return SimpleITK.GetArrayFromImage(result)
 {% endif %}
 
-{% if algorithm_output_sockets|has_file or phase.evaluation_additional_inputs|has_file %}
+{% if phase.algorithm_output_sockets|has_file or phase.evaluation_additional_inputs|has_file %}
 def load_file(*, location):
     # Reads the content of a file
     with open(location) as f:
