--- a/app/grandchallenge/forge/templates/forge/partials/example_algorithm/inference.py.template
+++ b/app/grandchallenge/forge/templates/forge/partials/example_algorithm/inference.py.template
@@ -24,7 +24,7 @@ Happy programming!
 from pathlib import Path
 import json
 import torch
-{% if phase.algorithm_input_sockets|has_image or phase.algorithm_output_sockets|has_image %}
+{% if object.algorithm_input_sockets|has_image or object.algorithm_output_sockets|has_image %}
 from glob import glob
 import SimpleITK
 import numpy
@@ -40,7 +40,7 @@ def run():
 
     # Lookup the handler for this particular set of sockets (i.e. the interface)
     handler = {
-    {% for interface_name, interface_key in phase.algorithm_interface_names|zip:phase.algorithm_interface_keys %}
+    {% for interface_name, interface_key in object.algorithm_interface_names|zip:object.algorithm_interface_keys %}
     {{ interface_key }} : {{ interface_name }}_handler,
     {% endfor %}
     }[interface_key]
@@ -48,21 +48,21 @@ def run():
     # Call the handler
     return handler()
 
-{% for interface_name, interface in phase.algorithm_interface_names|zip:phase.algorithm_interfaces %}
+{% for interface_name, interface in object.algorithm_interface_names|zip:object.algorithm_interfaces %}
 def {{ interface_name }}_handler():
     # Read the input
     {% for socket in interface.inputs %}
-    {% if socket|is_image %}
+    {% if socket.is_image %}
     input_{{ socket.slug|dash_to_underscore }} = load_image_file_as_array(
         location=INPUT_PATH / "{{ socket.relative_path }}",
     )
     {% endif %}
-    {% if socket|is_json %}
+    {% if socket.is_json %}
     input_{{ socket.slug|dash_to_underscore }} = load_json_file(
          location=INPUT_PATH / "{{ socket.relative_path }}",
     )
     {% endif %}
-    {% if socket|is_file %}
+    {% if socket.is_file %}
     input_{{ socket.slug|dash_to_underscore }} = load_file(
          location=INPUT_PATH / "{{ socket.relative_path }}",
     )
@@ -90,34 +90,34 @@ def {{ interface_name }}_handler():
     # For now, let us make bogus predictions
     {% for socket in interface.outputs %}
     output_{{ socket.slug|dash_to_underscore }} = {% spaceless %}
-        {% if socket|has_example_value %}
+        {% if socket.has_example_value %}
             {% if socket.example_value|is_string %}
                 "{{ socket.example_value }}"
             {% else %}
                 {{ socket.example_value }}
             {% endif %}
-        {% elif socket|is_image %} numpy.eye(4, 2)
-        {% elif socket|is_json %} {"content": "should match the required format"}
-        {% elif socket|is_file %} "content: should match the required format"
+        {% elif socket.is_image %} numpy.eye(4, 2)
+        {% elif socket.is_json %} {"content": "should match the required format"}
+        {% elif socket.is_file %} "content: should match the required format"
         {% endif %}
         {% endspaceless %}
     {% endfor %}
 
     # Save your output
     {% for socket in interface.outputs %}
-    {% if socket|is_image %}
+    {% if socket.is_image %}
     write_array_as_image_file(
         location=OUTPUT_PATH / "{{ socket.relative_path }}",
         array=output_{{ socket.slug|dash_to_underscore }},
     )
     {% endif %}
-    {% if socket|is_json %}
+    {% if socket.is_json %}
     write_json_file(
         location=OUTPUT_PATH / "{{ socket.relative_path }}",
         content=output_{{ socket.slug|dash_to_underscore }}
     )
     {% endif %}
-    {% if socket|is_file %}
+    {% if socket.is_file %}
     write_file(
         location=OUTPUT_PATH / "{{ socket.relative_path }}",
         content=output_{{ socket.slug|dash_to_underscore }}
@@ -133,7 +133,7 @@ def get_interface_key():
     inputs = load_json_file(
         location=INPUT_PATH / "inputs.json",
     )
-    socket_slugs = [sv["interface"]["slug"] for sv in inputs]
+    socket_slugs = [sv["socket"]["slug"] for sv in inputs]
     return tuple(sorted(socket_slugs))
 
 def load_json_file(*, location):
@@ -141,7 +141,7 @@ def load_json_file(*, location):
     with open(location, 'r') as f:
         return json.loads(f.read())
 
-{% if phase.algorithm_output_sockets|has_json %}
+{% if object.algorithm_output_sockets|has_json %}
 def write_json_file(*, location, content):
     # Writes a json file
     with open(location, 'w') as f:
@@ -149,7 +149,7 @@ def write_json_file(*, location, content):
 {% endif %}
 
 
-{% if phase.algorithm_input_sockets|has_image %}
+{% if object.algorithm_input_sockets|has_image %}
 def load_image_file_as_array(*, location):
     # Use SimpleITK to read a file
     input_files = glob(str(location / "*.tif")) + glob(str(location / "*.tiff")) + glob(str(location / "*.mha"))
@@ -160,7 +160,7 @@ def load_image_file_as_array(*, location):
 {% endif %}
 
 
-{% if phase.algorithm_output_sockets|has_image %}
+{% if object.algorithm_output_sockets|has_image %}
 def write_array_as_image_file(*, location, array):
     location.mkdir(parents=True, exist_ok=True)
 
@@ -176,7 +176,7 @@ def write_array_as_image_file(*, location, array):
 {% endif %}
 
 
-{% if phase.algorithm_input_sockets|has_file %}
+{% if object.algorithm_input_sockets|has_file %}
 # Note to the developer:
 #   the following function is very generic and should likely
 #   be adopted to something more specific for your algorithm/challenge
@@ -187,7 +187,7 @@ def load_file(*, location):
 {% endif %}
 
 
-{% if phase.algorithm_output_sockets|has_file %}
+{% if object.algorithm_output_sockets|has_file %}
 # Note to the developer:
 #   the following function is very generic and should likely
 #   be adopted to something more specific for your algorithm/challenge
