--- a/app/grandchallenge/forge/templates/forge/partials/example_evaluation_method/do_build.sh.template
+++ b/app/grandchallenge/forge/templates/forge/partials/example_evaluation_method/do_build.sh.template
@@ -4,7 +4,7 @@
 set -e
 
 SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}" )" &> /dev/null && pwd )
-DOCKER_IMAGE_TAG="example-evaluation-{{ phase.slug }}"
+DOCKER_IMAGE_TAG="example-evaluation-{{ object.slug }}"
 
 docker build \
   --platform=linux/amd64 \
