--- a/app/grandchallenge/forge/templates/forge/partials/example_evaluation_method/evaluate.py.template
+++ b/app/grandchallenge/forge/templates/forge/partials/example_evaluation_method/evaluate.py.template
@@ -29,14 +29,14 @@ https://grand-challenge.org/documentation/runtime-environment/
 Happy programming!
 """
 import json
-{% if phase.algorithm_output_sockets|has_image or phase.evaluation_additional_inputs|has_image or phase.evaluation_additional_outputs|has_image  %}
+{% if object.algorithm_output_sockets|has_image or object.evaluation_additional_inputs|has_image or object.evaluation_additional_outputs|has_image  %}
 from glob import glob
 import SimpleITK
 {% endif %}
-{% if phase.algorithm_output_sockets|has_image or phase.algorithm_output_sockets|has_file or phase.evaluation_additional_inputs|has_file %}
+{% if object.algorithm_output_sockets|has_image or object.algorithm_output_sockets|has_file or object.evaluation_additional_inputs|has_file %}
 import re
 {% endif %}
-{% if phase.evaluation_additional_outputs|has_image %}
+{% if object.evaluation_additional_outputs|has_image %}
 import numpy
 {% endif %}
 import random
@@ -113,39 +113,39 @@ def main():
     # Make sure to save the metrics
     write_metrics(metrics=metrics)
 
-    {% if phase.evaluation_additional_outputs %}
+    {% if object.evaluation_additional_outputs %}
 
     # For now, let us make bogus outputs for the evaluation
-    {% for socket in phase.evaluation_additional_outputs  %}
+    {% for socket in object.evaluation_additional_outputs  %}
     output_{{ socket.slug|dash_to_underscore }} = {% spaceless %}
-        {% if socket|has_example_value %}
+        {% if socket.has_example_value %}
             {% if socket.example_value|is_string %}
                 "{{ socket.example_value }}"
             {% else %}
                 {{ socket.example_value }}
             {% endif %}
-        {% elif socket|is_image %} numpy.eye(4, 2)
-        {% elif socket|is_json %} {"content": "should match the required format"}
-        {% elif socket|is_file %} "content: should match the required format"
+        {% elif socket.is_image %} numpy.eye(4, 2)
+        {% elif socket.is_json %} {"content": "should match the required format"}
+        {% elif socket.is_file %} "content: should match the required format"
         {% endif %}
         {% endspaceless %}
     {% endfor %}
 
     # Save your output
-    {% for socket in phase.evaluation_additional_outputs  %}
-    {% if socket|is_image %}
+    {% for socket in object.evaluation_additional_outputs  %}
+    {% if socket.is_image %}
     write_array_as_image_file(
         location=OUTPUT_DIRECTORY / "{{ socket.relative_path }}",
         array=output_{{ socket.slug|dash_to_underscore }},
     )
     {% endif %}
-    {% if socket|is_json %}
+    {% if socket.is_json %}
     write_json_file(
         location=OUTPUT_DIRECTORY / "{{ socket.relative_path }}",
         content=output_{{ socket.slug|dash_to_underscore }}
     )
     {% endif %}
-    {% if socket|is_file %}
+    {% if socket.is_file %}
     write_file(
         location=OUTPUT_DIRECTORY / "{{ socket.relative_path }}",
         content=output_{{ socket.slug|dash_to_underscore }}
@@ -163,26 +163,26 @@ def process(job):
 
     # Lookup the handler for this particular set of sockets (i.e. the interface)
     handler = {
-    {% for interface_name, interface_key in phase.algorithm_interface_names|zip:phase.algorithm_interface_keys %}
+    {% for interface_name, interface_key in object.algorithm_interface_names|zip:object.algorithm_interface_keys %}
     {{ interface_key }} : process_{{ interface_name }},
     {% endfor %}
     }[interface_key]
 
-    {% if phase.evaluation_additional_inputs %}
+    {% if object.evaluation_additional_inputs %}
     # Read additional inputs from the submission
 
-    {% for socket in phase.evaluation_additional_inputs %}
-    {% if socket|is_image %}
+    {% for socket in object.evaluation_additional_inputs %}
+    {% if socket.is_image %}
     submission_{{ socket.slug|dash_to_underscore }} = load_image_file_as_array(
         location=INPUT_DIRECTORY / "{{ socket.relative_path }}",
     )
     {% endif %}
-    {% if socket|is_json %}
+    {% if socket.is_json %}
     submission_{{ socket.slug|dash_to_underscore }} = load_json_file(
         location=INPUT_DIRECTORY / "{{ socket.relative_path }}",
     )
     {% endif %}
-    {% if socket|is_file %}
+    {% if socket.is_file %}
     submission_{{ socket.slug|dash_to_underscore }} = load_file(
         location=INPUT_DIRECTORY / "{{ socket.relative_path }}",
     )
@@ -191,7 +191,7 @@ def process(job):
     # Finally, call the handler
     return handler(
         job,
-    {% for socket in phase.evaluation_additional_inputs %}
+    {% for socket in object.evaluation_additional_inputs %}
        submission_{{ socket.slug|dash_to_underscore }},
     {% endfor %}
     )
@@ -201,10 +201,10 @@ def process(job):
     {% endif %}
 
 
-{% for interface_name, interface in phase.algorithm_interface_names|zip:phase.algorithm_interfaces %}
+{% for interface_name, interface in object.algorithm_interface_names|zip:object.algorithm_interfaces %}
 def process_{{ interface_name }}(job,
-    {% if phase.evaluation_additional_inputs %}# The submission had additional inputs: {% endif %}
-    {% for socket in phase.evaluation_additional_inputs %}
+    {% if object.evaluation_additional_inputs %}# The submission had additional inputs: {% endif %}
+    {% for socket in object.evaluation_additional_inputs %}
     submission_{{ socket.slug|dash_to_underscore }},
     {% endfor %}
 ):
@@ -224,17 +224,17 @@ def process_{{ interface_name }}(job,
 
     # Secondly, read the results
     {% for socket in interface.outputs %}
-    {% if socket|is_image %}
+    {% if socket.is_image %}
     result_{{ socket.slug|dash_to_underscore }} = load_image_file_as_array(
         location=location_{{ socket.slug|dash_to_underscore }},
     )
     {% endif %}
-    {% if socket|is_json %}
+    {% if socket.is_json %}
     result_{{ socket.slug|dash_to_underscore }} = load_json_file(
         location=location_{{ socket.slug|dash_to_underscore }},
     )
     {% endif %}
-    {% if socket|is_file %}
+    {% if socket.is_file %}
     result_{{ socket.slug|dash_to_underscore }} = load_file(
         location=location_{{ socket.slug|dash_to_underscore }},
     )
@@ -244,13 +244,13 @@ def process_{{ interface_name }}(job,
 
     # Thirdly, retrieve the input file name to match it with your ground truth
     {% for socket in interface.inputs %}
-    {% if socket|is_image %}
+    {% if socket.is_image %}
     image_name_{{ socket.slug|dash_to_underscore }} = get_image_name(
             values=job["inputs"],
             slug="{{ socket.slug }}",
     )
     {% endif %}
-    {% if socket|is_file %}
+    {% if socket.is_file %}
     file_name_{{ socket.slug|dash_to_underscore }} = get_file_name(
             values=job["inputs"],
             slug="{{ socket.slug }}",
@@ -293,25 +293,25 @@ def read_predictions():
 
 def get_interface_key(job):
     # Each interface has a unique key that is the set of socket slugs given as input
-    socket_slugs = [sv["interface"]["slug"] for sv in job["inputs"]]
+    socket_slugs = [sv["socket"]["slug"] for sv in job["inputs"]]
     return tuple(sorted(socket_slugs))
 
-{% if phase.algorithm_input_sockets|has_image or phase.evaluation_additional_inputs|has_image %}
+{% if object.algorithm_input_sockets|has_image or object.evaluation_additional_inputs|has_image %}
 def get_image_name(*, values, slug):
     # This tells us the user-provided name of the input or output image
     for value in values:
-        if value["interface"]["slug"] == slug:
+        if value["socket"]["slug"] == slug:
             return value["image"]["name"]
 
     raise RuntimeError(f"Image with interface {slug} not found!")
 {% endif %}
 
 
-{% if phase.algorithm_input_sockets|has_file or phase.evaluation_additional_inputs|has_file %}
+{% if object.algorithm_input_sockets|has_file or object.evaluation_additional_inputs|has_file %}
 def get_file_name(*, values, slug):
     # This tells us the user-provided name of the input file
     for value in values:
-        if value["interface"]["slug"] == slug:
+        if value["socket"]["slug"] == slug:
             file_url = value["file"]
             pattern = r'[^/]+$'
             match = re.search(pattern, file_url)
@@ -326,8 +326,8 @@ def get_file_name(*, values, slug):
 def get_interface_relative_path(*, values, slug):
     # Gets the location of the interface relative to the input or output
     for value in values:
-        if value["interface"]["slug"] == slug:
-            return value["interface"]["relative_path"]
+        if value["socket"]["slug"] == slug:
+            return value["socket"]["relative_path"]
 
     raise RuntimeError(f"Value with interface {slug} not found!")
 
@@ -343,7 +343,7 @@ def load_json_file(*, location):
     with open(location) as f:
         return json.loads(f.read())
 
-{% if phase.algorithm_output_sockets|has_image or phase.evaluation_additional_inputs|has_image%}
+{% if object.algorithm_output_sockets|has_image or object.evaluation_additional_inputs|has_image%}
 def load_image_file_as_array(*, location):
     # Use SimpleITK to read a file
     input_files = glob(str(location / "*.tiff")) + glob(str(location / "*.mha"))
@@ -353,7 +353,7 @@ def load_image_file_as_array(*, location):
     return SimpleITK.GetArrayFromImage(result)
 {% endif %}
 
-{% if phase.algorithm_output_sockets|has_file or phase.evaluation_additional_inputs|has_file %}
+{% if object.algorithm_output_sockets|has_file or object.evaluation_additional_inputs|has_file %}
 def load_file(*, location):
     # Reads the content of a file
     with open(location) as f:
@@ -365,14 +365,14 @@ def write_metrics(*, metrics):
     # Write a json document used for ranking results on the leaderboard
     write_json_file(location=OUTPUT_DIRECTORY / "metrics.json", content=metrics)
 
-{% if phase.evaluation_additional_outputs|has_file %}
+{% if object.evaluation_additional_outputs|has_file %}
 def write_file(*, location, content):
     # Write the content to a file
     with open(location, 'w') as f:
         return f.write(content)
 {% endif %}
 
-{% if phase.evaluation_additional_outputs|has_image %}
+{% if object.evaluation_additional_outputs|has_image %}
 def write_array_as_image_file(*, location, array):
     location.mkdir(parents=True, exist_ok=True)
 
