--- a/app/grandchallenge/forge/templates/forge/partials/example_algorithm/inference.py.template
+++ b/app/grandchallenge/forge/templates/forge/partials/example_algorithm/inference.py.template
@@ -24,10 +24,16 @@ Happy programming!
 from pathlib import Path
 import json
 import torch
-{% if object.algorithm_input_sockets|has_image or object.algorithm_output_sockets|has_image %}
+
+{% if object.algorithm_input_sockets|has_image or object.algorithm_output_sockets|has_image or object.algorithm_input_sockets|has_dicom_image_set %}
 from glob import glob
-import SimpleITK
 import numpy
+{% endif %}
+{% if object.algorithm_input_sockets|has_image or object.algorithm_output_sockets|has_image %}
+import SimpleITK
+{% endif %}
+{% if object.algorithm_input_sockets|has_dicom_image_set %}
+import pydicom
 {% endif %}
 
 INPUT_PATH = Path("/input")
@@ -52,17 +58,19 @@ def run():
 def {{ interface_name }}_handler():
     # Read the input
     {% for socket in interface.inputs %}
-    {% if socket.is_image %}
+    {% if socket.is_dicom_image_set %}
+    input_{{ socket.slug|dash_to_underscore }} = load_dicom_image_set_as_array(
+        location=INPUT_PATH / "{{ socket.relative_path }}",
+    )
+    {% elif socket.is_image %}
     input_{{ socket.slug|dash_to_underscore }} = load_image_file_as_array(
         location=INPUT_PATH / "{{ socket.relative_path }}",
     )
-    {% endif %}
-    {% if socket.is_json %}
+    {% elif socket.is_json %}
     input_{{ socket.slug|dash_to_underscore }} = load_json_file(
          location=INPUT_PATH / "{{ socket.relative_path }}",
     )
-    {% endif %}
-    {% if socket.is_file %}
+    {% elif socket.is_file %}
     input_{{ socket.slug|dash_to_underscore }} = load_file(
          location=INPUT_PATH / "{{ socket.relative_path }}",
     )
@@ -148,7 +156,6 @@ def write_json_file(*, location, content):
         f.write(json.dumps(content, indent=4))
 {% endif %}
 
-
 {% if object.algorithm_input_sockets|has_image %}
 def load_image_file_as_array(*, location):
     # Use SimpleITK to read a file
@@ -157,6 +164,34 @@ def load_image_file_as_array(*, location):
 
     # Convert it to a Numpy array
     return SimpleITK.GetArrayFromImage(result)
+{% endif %}
+
+
+{% if object.algorithm_input_sockets|has_dicom_image_set %}
+def load_dicom_image_set_as_array(*, location):
+    pass
+{% comment %}
+    # Get all DICOM files in the directory
+    dicom_files = glob(str(location / "*.dcm"))
+
+    # Read all slices
+    slices = [pydicom.dcmread(f, force=True) for f in dicom_files]
+    decompressed_slices = [slice.decompress() for slice in slices]
+
+    # Extracting pixel-data is non-trivial
+    # - Slices need to be sorted in case of a 3D volume or 4D volume
+    # - Pixel data will need to be decompressed
+    # - Any required transformations need to be performed (e.g. scaling via RescaleIntercept/RescaleSlope)
+    # - ... et cetera
+    # Please refer to Pydicom's documentation: https://pydicom.github.io/pydicom/1.1/pydicom_user_guide.html
+
+    # Here we'll just return a null array with an approximately correct shape
+    if len(dicom_files) > 2:
+        result = numpy.array([[[0]]]) # 3D
+    else:
+        result = numpy.array([[0]]) # 2D
+
+    return result {% endcomment %}
 {% endif %}
 
 
