--- a/app/grandchallenge/forge/templates/forge/partials/example_algorithm/requirements.txt.template
+++ b/app/grandchallenge/forge/templates/forge/partials/example_algorithm/requirements.txt.template
@@ -1,5 +1,13 @@
 {% load forge %}
+{% if object.algorithm_input_sockets|has_image or object.algorithm_output_sockets|has_image or object.algorithm_input_sockets|has_dicom_image_set %}
+numpy
+{% endif %}
 {% if object.algorithm_input_sockets|has_image or object.algorithm_output_sockets|has_image %}
 SimpleITK
-numpy
+{% endif %}
+{% if object.algorithm_input_sockets|has_dicom_image_set %}
+pydicom
+# Required to decompress some DICOM transfer syntaxes
+pylibjpeg
+pylibjpeg-libjpeg
 {% endif %}
