Mention transfer syntaxes

--- a/app/grandchallenge/forge/templates/forge/partials/example_algorithm/inference.py.template
+++ b/app/grandchallenge/forge/templates/forge/partials/example_algorithm/inference.py.template
@@ -178,9 +178,9 @@ def load_dicom_image_set_as_array(*, location):
     slices = [pydicom.dcmread(f, force=True) for f in dicom_files]
     decompressed_slices = [slice.decompress() for slice in slices]
 
-    # Extracting pixel-data is non-trivial
+    # Extracting pixel-data is non-trivial:
     # - Slices need to be sorted in case of a 3D volume or 4D volume
-    # - Pixel data will need to be decompressed
+    # - Pixel data will need to be decompressed, supporting different transfer syntaxes
     # - Any required transformations need to be performed (e.g. scaling via RescaleIntercept/RescaleSlope)
     # - ... et cetera
     # Please refer to Pydicom's documentation: https://pydicom.github.io/pydicom/1.1/pydicom_user_guide.html
