--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,8 @@ jobs:
               run: |
                 sudo apt-get update
                 sudo apt-get install -y libcurl4-openssl-dev libssl-dev
+            - name: Clean up large cache file so sufficient space is available for containers below
+              run: rm -rf /opt/hostedtoolcache
             - name: Pull the GPU container
               run: |
                 docker pull --platform=linux/amd64 \
