--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,17 +55,13 @@ jobs:
               run: |
                 sudo apt-get update
                 sudo apt-get install -y libcurl4-openssl-dev libssl-dev
-            - name: Clean up large cache file so sufficient space is available for containers below
+            - name: Clean up large cache file so sufficient space is available for container below
               run: |
                 rm -rf /opt/hostedtoolcache
-            - name: Pull the GPU container
+            - name: Pull the algorithm-example base container
               run: |
                 docker pull --platform=linux/amd64 \
                 public.ecr.aws/deep-learning-containers/pytorch-inference:2.6.0-gpu-py312-cu124-ubuntu22.04-sagemaker
-            - name: Pull the CPU container
-              run: |
-                docker pull --platform=linux/amd64 \
-                public.ecr.aws/deep-learning-containers/pytorch-inference:2.6.0-cpu-py312-ubuntu22.04-sagemaker
             - name: Set up Python ${{ env.PYTHON_VERSION }}
               uses: astral-sh/setup-uv@v6
               with:
