--- a/app/grandchallenge/forge/templates/forge/partials/example_evaluation_method/Dockerfile
+++ b/app/grandchallenge/forge/templates/forge/partials/example_evaluation_method/Dockerfile
@@ -1,12 +1,4 @@
-FROM --platform=linux/amd64 public.ecr.aws/deep-learning-containers/pytorch-inference:2.6.0-cpu-py312-ubuntu22.04-sagemaker AS example_evaluation_amd64
-# When in need of a GPU, use the CUDA enabled: public.ecr.aws/deep-learning-containers/pytorch-inference:2.6.0-gpu-py312-cu124-ubuntu22.04-sagemaker
-# These are sourced from: https://gallery.ecr.aws/deep-learning-containers/pytorch-inference
-
-# By using this brand of SageMaker-ready container images you get the benefit from reduced
-# pulling time in the runtime environment: making it more cost efficient.
-
-# Note: a SageMaker-branded container image is not required for an algorithm to work:
-# using other containers as a base will work.
+FROM --platform=linux/amd64 docker.io/library/python:3.14-slim AS example-evaluation-amd64
 
 # Ensures that Python output to stdout/stderr is not buffered: prevents missing information when terminating
 ENV PYTHONUNBUFFERED=1
